<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:id="@+id/cardBack">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/colour_pick"
        android:id="@+id/title"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="@dimen/layout_margin"
        android:padding="@dimen/layout_margin"
        app:layout_constraintTop_toTopOf="parent"/>


    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintEnd_toStartOf="@id/blue"
        android:layout_weight="1"
        android:tag="@string/red"
        android:id="@+id/red" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:tag="@string/blue"
        app:layout_constraintTop_toTopOf="@id/red"
        app:layout_constraintStart_toEndOf="@id/red"
        app:layout_constraintEnd_toStartOf="@id/green"
        android:id="@+id/blue"
        />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:tag="@string/green"
        android:id="@+id/green"
        app:layout_constraintTop_toTopOf="@id/blue"
        app:layout_constraintStart_toEndOf="@id/blue"
        app:layout_constraintEnd_toStartOf="@id/yellow"
        />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:id="@+id/yellow"
        android:tag="@string/yellow"
        app:layout_constraintTop_toTopOf="@id/green"
        app:layout_constraintStart_toEndOf="@id/green"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:id="@+id/purple"
        android:tag="@string/purple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/red"
        app:layout_constraintEnd_toStartOf="@id/pink"
        />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:tag="@string/pink"
        app:layout_constraintStart_toEndOf="@id/purple"
        app:layout_constraintTop_toBottomOf="@id/blue"
        app:layout_constraintEnd_toStartOf="@id/orange"
        android:id="@+id/pink"
        />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        app:layout_constraintStart_toEndOf="@id/pink"
        app:layout_constraintTop_toBottomOf="@id/green"
        app:layout_constraintEnd_toStartOf="@id/white"
        android:tag="@string/orange"
        android:id="@+id/orange"
        />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:id="@+id/white"
        android:tag="@string/white"
        app:layout_constraintStart_toEndOf="@id/orange"
        app:layout_constraintTop_toBottomOf="@id/yellow"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:id="@+id/cancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/pink"/>

</androidx.constraintlayout.widget.ConstraintLayout>