<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/archive"
        android:title=""
        android:icon="@drawable/ic_archive_white_24dp"
        android:orderInCategory="10"
        app:showAsAction="ifRoom">

    </item>

    <item
        android:title=""
        android:icon="@drawable/ic_more_vert_white_24dp"
        android:orderInCategory="101"
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/preferences"
                android:title="@string/settings"
                android:icon="@drawable/ic_settings_black_24dp"/>
            <item
                android:id="@+id/share"
                android:title="@string/share"
                android:icon="@drawable/ic_share_black_24dp"/>
            <item
                android:id="@+id/about"
                android:title="@string/about"
                android:icon="@drawable/ic_info_outline_black_24dp"/>
        </menu>

    </item>


</menu>
