<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/layout_margin"
            app:cardElevation="@dimen/elevation"
            android:id="@+id/card"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_marginRight="@dimen/half_layout_margin"
            android:layout_marginLeft="@dimen/half_layout_margin"
            android:layout_marginBottom="@dimen/layout_margin">
            
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/layout_margin">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/layout_margin"
                    android:paddingRight="@dimen/layout_margin"
                    android:paddingTop="@dimen/layout_margin"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:layout_marginStart="@dimen/layout_margin"
                    android:layout_marginEnd="@dimen/layout_margin"
                    android:gravity="center"
                    android:text="@string/terms_condition_title"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/linkTitle"
                    android:text="@string/fact_string"
                    android:paddingLeft="@dimen/layout_margin"
                    android:paddingRight="@dimen/layout_margin"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:layout_marginStart="@dimen/layout_margin"
                    android:layout_marginEnd="@dimen/layout_margin"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/title"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/accept_text"
                    android:text="@string/accept_terms"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/fab_margin"
                    app:layout_constraintTop_toBottomOf="@id/linkTitle"
                    app:layout_constraintStart_toStartOf="parent"/>

                <android.support.v7.widget.AppCompatCheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tandc"
                    android:checked="false"
                    app:layout_constraintTop_toBottomOf="@id/linkTitle"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/accept_text"
                    android:layout_margin="@dimen/fab_margin"/>
                
                
            </android.support.constraint.ConstraintLayout>
            
        </android.support.v7.widget.CardView>

</android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>